Tutorials toc only fixed when window > 600px wide
When the window is too narrow, the table of contents is moved back in
line at the top of the page.

--- a/src/components/Tutorials.css
+++ b/src/components/Tutorials.css
@@ -13,3 +13,9 @@ kbd {
 .fiji_icon {
   height: 1em;
 }
+
+@media (min-width: 600px) {
+  .toc {
+    position: fixed;
+  }
+}
